# as

./: .gitignore  README.md  pyproject.toml  setup_models.py  test.py  train.py
src/config/: train.yaml  train_kaggle.yaml
src/datasets/: __init__.py  asvspoof_dataset.py
src/logger/: logger.py  wandb.py
src/metric/: __init__.py  base_metric.py  eer_metric.py  utils.py
src/model/: __init__.py
src/model/rawnet2/: rawnet2.py  reslayer.py  sinclayer.py  utils.py
src/tests/: python_path.py  test_dataloader.py  test_datasets.py  test_text_encoder.py
src/trainer/: trainer.py
src/utils/: object_loading.py  util.py
test_audio/: shrek.flac
