[tool.poetry]
name = "as-hw"
version = "0.1.0"
description = "My AS homework"
authors = ["Artur Gimranov"]
readme = "README.md"

packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9"
torch = "==1.11.0"
torchvision = ">=0.12.0"
torchaudio = "==0.11.0"
hydra-core = "==1.3"
numpy = "*"
tqdm = "*"
tensorboard = "*"
matplotlib = "*"
pandas = "*"
wandb = "*"
gdown = "*"
wget = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
